# india_AI

./: README.md
NER/: .gitignore  main.py  ocr.py  server.py
agents_prototype/: Makefile  README.md  main.py  pyproject.toml
agents_prototype/app/: agent.py
agents_prototype/app/.adk/: session.db
agents_prototype/app/sub_agents/document_ingestion_agent/: __init__.py  agent.py  tool.py
agents_prototype/app/sub_agents/ocr_execution_agent/: __init__.py  agent.py  tool.py
agents_prototype/app/sub_agents/preprocessing_agent/: __init__.py  agent.py  tool.py
agents_prototype/app/sub_agents/router_agent/: __init__.py  agent.py  tool.py
backend/src/main/java/com/kyc/controller/: DeleteCustomerController.java  ExtractDetails.java  FetchByCustID.java  FetchLinksByCustID.java  SearchByCustID.java  SearchByName.java  UpdateDetailsController.java  UploadDetails.java  UploadDetailsExisting.java  UploadFingerprint.java
backend/src/main/java/com/kyc/model/: DocumentModel.java
frontend/src/: App.jsx
frontend/src/Pages/: ConfirmDetailsPage.jsx  UploadPage.jsx  UserDetailsPage.jsx
frontend/src/components/: Navbar.jsx
